estilo do passar e clicar com o mouse
correções do estilo do focus e hover.
modificações do min-width do texto princial.
modificações no estilo dos links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <input type="password" placeholder="Senha" name="senha" id="senha">
                     <button type="submit" value="entrar" id="entrar">Entrar</button>
 
-                    <a href="#">Esqueceu a senha?</a>
+                    <a class="esqueceu" href="#">Esqueceu a senha?</a>
                     
                     <div class="linha"></div>
 
