--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilo.css">
-    <title>Document</title>
+    <link rel="icon" type="image/gif/png" href="img/fb_icon_325x325.png">
+    <title>Facebook clone - entre ou cadastre-se</title>
 </head>
 <body>
 
